better ctor for constant