@@ -122,7 +122,7 @@ public class PositionablePropertiesUtil {
         Color desiredColor = Color.black;
         int backCurrentColor = _backgroundcolors.length-1;
         for (int i = 0; i < _backgroundcolors.length; i++) {
-            intArray[i] = new Integer(i);
+            intArray[i] = Integer.valueOf(i);
               try {
                 // try to get a color by name using reflection
                 Field f = Color.class.getField((_backgroundcolors[i].toUpperCase()).replaceAll(" ", "_"));
@@ -330,7 +330,7 @@ public class PositionablePropertiesUtil {
         Integer[] intArray = new Integer[_backgroundcolors.length];
         int borderCurrentColor =_backgroundcolors.length-1;
         for (int i = 0; i < _backgroundcolors.length; i++) {
-            intArray[i] = new Integer(i);
+            intArray[i] = Integer.valueOf(i);
             try {
                 Field f = Color.class.getField((_fontcolors[i].toUpperCase()).replaceAll(" ", "_"));
                 desiredColor = (Color) f.get(null);
